--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <!-- ionic/angularjs scripts -->
     <script src="lib/js/ionic.bundle.js"></script>
 
+
     <!-- cordova script (404 during development) -->
     <script src="cordova.js"></script>
 
@@ -22,7 +23,7 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
-
+    <script src="js/angular-md5/angular-md5.js"></script>
 
   </head>
 
